--- a/Final/presentation/src/main/res/layout/simple_dialog.xml
+++ b/Final/presentation/src/main/res/layout/simple_dialog.xml
@@ -47,16 +47,15 @@
 
     <com.google.android.material.button.MaterialButton
             android:id="@+id/button_cancel"
-            style="@style/Widget.MaterialComponents.Button.TextButton"
+            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
             android:textSize="16sp"
             android:text="@string/label_cancel"
             android:textColor="@color/accent"
             android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toBottomOf="@+id/button_confirm"
             app:layout_constraintEnd_toStartOf="@+id/button_confirm"
             app:layout_constraintTop_toTopOf="@+id/button_confirm" />
 
