--- a/Final/presentation/src/main/res/layout/fragment_navigation.xml
+++ b/Final/presentation/src/main/res/layout/fragment_navigation.xml
@@ -72,14 +72,23 @@
             app:layout_constraintTop_toTopOf="parent" />
 
     <ubb.thesis.david.monumental.common.FlatButton
+            android:id="@+id/button_save_progress"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:text="@string/label_save_progress"
+            app:invertColors="true"
+            app:layout_constraintBottom_toTopOf="@+id/button_take_photo"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+    <ubb.thesis.david.monumental.common.FlatButton
             android:id="@+id/button_take_photo"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:text="@string/label_take_photo"
+            app:text="@string/label_capture_landmark"
             android:visibility="gone"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
