--- a/Final/presentation/src/main/res/layout/fragment_start.xml
+++ b/Final/presentation/src/main/res/layout/fragment_start.xml
@@ -39,9 +39,9 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:layout_marginEnd="16dp"
+                android:layout_marginEnd="24dp"
                 android:layout_marginBottom="8dp"
-                android:layout_marginStart="16dp"
+                android:layout_marginStart="24dp"
                 android:textSize="32sp"
                 android:text="@{viewModel.sessionMessage}"
                 android:lines="3"
@@ -71,15 +71,27 @@
                 app:layout_constraintBottom_toTopOf="@+id/button_resume" />
 
         <ubb.thesis.david.monumental.common.FlatButton
+                android:id="@+id/button_load"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                app:text="@string/label_load"
+                app:invertColors="true"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toTopOf="@+id/button_start_new"
+                app:layout_constraintEnd_toStartOf="@+id/button_resume" />
+
+        <ubb.thesis.david.monumental.common.FlatButton
                 android:id="@+id/button_resume"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 app:text="@string/resume"
                 app:invertColors="true"
                 android:visibility="@{viewModel.sessionAvailable ? View.VISIBLE : View.GONE}"
+                app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintBottom_toTopOf="@+id/button_start_new"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
+                app:layout_constraintStart_toEndOf="@+id/button_load" />
 
         <ubb.thesis.david.monumental.common.FlatButton
                 android:id="@+id/button_start_new"
