--- a/Final/presentation/src/main/res/layout/fragment_navigation.xml
+++ b/Final/presentation/src/main/res/layout/fragment_navigation.xml
@@ -1,94 +1,106 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/container_fragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".view.session.NavigationFragment">
+        xmlns:tools="http://schemas.android.com/tools">
 
-    <TextView
-            android:id="@+id/label_target"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="24dp"
-            android:layout_marginBottom="32dp"
-            android:layout_marginStart="24dp"
-            android:textSize="24sp"
-            android:text="@string/placeholder_target"
-            android:textAlignment="center"
-            android:visibility="gone"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/label_remaining" />
+    <data>
 
-    <TextView
-            android:id="@+id/label_remaining"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="24dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginStart="24dp"
-            android:textSize="24sp"
-            android:text="@string/placeholder_remaining"
-            android:textAlignment="center"
-            android:visibility="gone"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/navigation_arrow" />
+        <import type="android.view.View" />
 
-    <TextView
-            android:id="@+id/label_distance"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="24dp"
-            android:layout_marginBottom="64dp"
-            android:layout_marginStart="24dp"
-            android:textSize="24sp"
-            android:text="@string/placeholder_distance"
-            android:textAlignment="center"
-            android:visibility="gone"
-            app:layout_constraintBottom_toTopOf="@+id/navigation_arrow"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/label_remaining" />
+        <variable
+                name="viewModel"
+                type="ubb.thesis.david.monumental.view.session.NavigationViewModel" />
+    </data>
 
-    <ImageView
-            android:id="@+id/navigation_arrow"
-            android:layout_width="256dp"
-            android:layout_height="256dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:src="@drawable/navigation_arrow_gray"
-            android:contentDescription="@string/nav_arrow"
-            android:visibility="visible"
-            app:layout_constraintVertical_bias="0.65"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/button_take_photo"
-            app:layout_constraintTop_toTopOf="parent" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/container_fragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:context=".view.session.NavigationFragment">
 
-    <ubb.thesis.david.monumental.common.FlatButton
-            android:id="@+id/button_save_progress"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            app:text="@string/label_save_progress"
-            app:invertColors="true"
-            app:layout_constraintBottom_toTopOf="@+id/button_take_photo"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+        <TextView
+                android:id="@+id/label_target"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="24dp"
+                android:layout_marginBottom="32dp"
+                android:layout_marginStart="24dp"
+                android:textSize="24sp"
+                android:textAlignment="center"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toTopOf="@+id/label_remaining"
+                app:textAnimated="@{String.format(@string/label_target, viewModel.nearestLandmark.label)}"
+                app:animatedVisibility="@{(viewModel.nearestLandmark != null) ? View.VISIBLE : View.GONE}" />
 
-    <ubb.thesis.david.monumental.common.FlatButton
-            android:id="@+id/button_take_photo"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            app:text="@string/label_capture_landmark"
-            android:visibility="gone"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" />
+        <TextView
+                android:id="@+id/label_remaining"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="24dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginStart="24dp"
+                android:textSize="24sp"
+                android:textAlignment="center"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toTopOf="@+id/navigation_arrow"
+                app:textAnimated="@{String.format(@string/label_remaining, viewModel.sessionLandmarks.size)}"
+                app:animatedVisibility="@{(viewModel.sessionLandmarks != null) ? View.VISIBLE : View.GONE}" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+                android:id="@+id/label_distance"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="24dp"
+                android:layout_marginBottom="64dp"
+                android:layout_marginStart="24dp"
+                android:textSize="24sp"
+                android:textAlignment="center"
+                app:layout_constraintBottom_toTopOf="@+id/navigation_arrow"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/label_remaining"
+                app:textAnimated="@{String.format(@string/label_distance, viewModel.distanceToTarget)}"
+                app:animatedVisibility="@{(viewModel.distanceToTarget != null) ? View.VISIBLE : View.GONE}" />
+
+        <ImageView
+                android:id="@+id/navigation_arrow"
+                android:layout_width="256dp"
+                android:layout_height="256dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:src="@drawable/navigation_arrow_gray"
+                android:contentDescription="@string/nav_arrow"
+                android:visibility="visible"
+                app:layout_constraintVertical_bias="0.65"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toTopOf="@+id/button_take_photo"
+                app:layout_constraintTop_toTopOf="parent" />
+
+        <ubb.thesis.david.monumental.common.FlatButton
+                android:id="@+id/button_save_progress"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                app:text="@string/label_save_progress"
+                app:invertColors="true"
+                app:layout_constraintBottom_toTopOf="@+id/button_take_photo"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
+
+        <ubb.thesis.david.monumental.common.FlatButton
+                android:id="@+id/button_take_photo"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                app:text="@string/label_capture_landmark"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:animatedVisibility="@{(viewModel.nearestLandmark != null) ? View.VISIBLE : View.GONE}" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</layout>
