--- a/Final/presentation/src/main/res/layout/activity_main.xml
+++ b/Final/presentation/src/main/res/layout/activity_main.xml
@@ -42,12 +42,12 @@
 
             <TextView
                     android:id="@+id/toolbar_title"
-                    android:textStyle="bold"
-                    android:textSize="24sp"
-                    android:textColor="@color/secondary_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center" />
+                    android:layout_gravity="center"
+                    android:textSize="24sp"
+                    android:textStyle="bold"
+                    android:textColor="@color/secondary_text" />
 
         </androidx.appcompat.widget.Toolbar>
 
