--- a/Final/presentation/src/main/res/menu/activity_home_drawer.xml
+++ b/Final/presentation/src/main/res/menu/activity_home_drawer.xml
@@ -3,41 +3,14 @@
       xmlns:tools="http://schemas.android.com/tools"
       tools:showIn="navigation_view">
 
-    <group android:checkableBehavior="single">
+    <group android:checkableBehavior="none">
         <item
-                android:id="@+id/nav_camera"
-                android:icon="@drawable/ic_menu_camera"
-                android:title="Import" />
-        <item
-                android:id="@+id/nav_gallery"
-                android:icon="@drawable/ic_menu_gallery"
-                android:title="Gallery" />
-        <item
-                android:id="@+id/nav_slideshow"
-                android:icon="@drawable/ic_menu_slideshow"
-                android:title="Slideshow" />
-        <item
-                android:id="@+id/nav_manage"
-                android:icon="@drawable/ic_menu_manage"
-                android:title="Tools" />
-
+                android:id="@+id/option_history"
+                android:icon="@drawable/history_black_24dp"
+                android:title="@string/label_session_history" />
         <item
                 android:id="@+id/option_sign_out"
                 android:icon="@drawable/icon_login"
-                android:title="Sign out"/>
+                android:title="@string/label_sign_out" />
     </group>
-
-    <item android:title="Communicate">
-        <menu>
-            <item
-                    android:id="@+id/nav_share"
-                    android:icon="@drawable/ic_menu_share"
-                    android:title="Share" />
-            <item
-                    android:id="@+id/nav_send"
-                    android:icon="@drawable/ic_menu_send"
-                    android:title="Send" />
-        </menu>
-    </item>
-
 </menu>
