Small ui changes

--- a/Final/presentation/src/main/res/layout/fragment_navigation.xml
+++ b/Final/presentation/src/main/res/layout/fragment_navigation.xml
@@ -107,11 +107,12 @@
                 android:id="@+id/button_take_photo"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:visibility="gone"
                 app:text="@string/label_capture_landmark"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:animatedVisibility="@{(viewModel.distanceToTarget &lt; 100) ? View.VISIBLE : View.GONE }" />
+                app:animatedVisibility="@{(viewModel.distanceToTarget != null &amp;&amp; viewModel.distanceToTarget &lt; 100) ? View.VISIBLE : View.GONE }" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
